--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.4.0",
+    "axios": "^1.6.2",
     "firebase": "^10.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
