--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^10.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
